; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mleak_logger.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mleak_logger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@mclfindleak = common dso_local global i64 0, align 8
@mleak_table = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@MLEAK_STACK_DEPTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32)* @mleak_logger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mleak_logger(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = load i64, i64* @mclfindleak, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %40

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %14
  %18 = load i32*, i32** %5, align 8
  call void @mleak_free(i32* %18)
  br label %40

19:                                               ; preds = %14
  %20 = call i32 @atomic_add_32_ov(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mleak_table, i32 0, i32 1), i32 1)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mleak_table, i32 0, i32 0), align 4
  %23 = srem i32 %21, %22
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %40

25:                                               ; preds = %19
  %26 = load i32*, i32** %5, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %25
  %29 = load i32, i32* @MLEAK_STACK_DEPTH, align 4
  %30 = zext i32 %29 to i64
  %31 = call i8* @llvm.stacksave()
  store i8* %31, i8** %8, align 8
  %32 = alloca i64, i64 %30, align 16
  store i64 %30, i64* %9, align 8
  %33 = load i32, i32* @MLEAK_STACK_DEPTH, align 4
  %34 = call i32 @backtrace(i64* %32, i32 %33)
  store i32 %34, i32* %10, align 4
  %35 = load i32*, i32** %5, align 8
  %36 = load i32, i32* %10, align 4
  %37 = load i32, i32* %4, align 4
  %38 = call i32 @mleak_log(i64* %32, i32* %35, i32 %36, i32 %37)
  %39 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %39)
  br label %40

40:                                               ; preds = %13, %17, %28, %25, %19
  ret void
}

declare dso_local void @mleak_free(i32*) #1

declare dso_local i32 @atomic_add_32_ov(i32*, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @backtrace(i64*, i32) #1

declare dso_local i32 @mleak_log(i64*, i32*, i32, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
